--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css"/>
     <title>Prework Study Guide</title>
   </head>
 
@@ -27,7 +28,9 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>It's the styling for a web application</li>
+          <li>Creating boreders, changing coler, altering the font</li>
+          <li> And so much more!</li>
         </ul>
       </section>
 
